--- a/carros/src/main/resources/application.properties
+++ b/carros/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/carros?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/carros?useSSL=false&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=
 
