--- a/carros/pom.xml
+++ b/carros/pom.xml
@@ -43,6 +43,13 @@
 			<artifactId>lombok</artifactId>
 			<scope>annotationProcessor</scope>
 		</dependency>
+
+		 <!-- Model Mapper: http://modelmapper.org/ -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.0</version>
+        </dependency>
 		
 	</dependencies>
 
