--- a/carros/pom.xml
+++ b/carros/pom.xml
@@ -50,6 +50,13 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+		<!-- H2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
 		
 	</dependencies>
 
