--- a/carros/pom.xml
+++ b/carros/pom.xml
@@ -51,6 +51,10 @@
             <version>2.3.0</version>
         </dependency>
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
