Utilizando o FIREBASE para mandar os arquivos

--- a/carros/pom.xml
+++ b/carros/pom.xml
@@ -76,7 +76,22 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+		<!-- Firebase Admin -->
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>6.8.0</version>
+        </dependency>
+
 	</dependencies>
+
+	<repositories>
+        <repository>
+            <id>spring-repo</id>
+            <url>https://maven.google.com/</url>
+        </repository>
+    </repositories>
 
 	<build>
 		<plugins>
